# Platform-for-Metro-Crowd-Management-and-Scheduling

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  MetroFlow_Final_Documentation.docx  README.md  docker-compose.yml  nginx.conf  package-lock.json  requirements.txt  run_eda.py  run_project.py
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  EDADelhi metro.ipynb  README.md  alembic.ini  app.py  check_dataset.py  check_stations.py  config.py  create_tables.py  data_preparation.py  database.py  export_datasets.py  generate_sample_data.py  import_data.py  main.py  models.py  package-lock.json  package.json  preprocessing.py  pyproject.toml  requirements.txt  reset_database.py  run_backend.bat  test_db.py  test_gemini.py  test_predictions.py  train_lstm.py
backend/ai/: generate_dataset.py  preprocess.py  train_model.py
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  create_tables.py  database.py  db_init.py  main.py  models.py  schemas.py  seed.py  websocket.py
backend/auth/: dependencies.py  security.py
backend/core/: config.py
backend/data/: MetroFlow_Dataset.xlsx  Route_master.csv  StopTime_master.csv  Trip_master.csv  preprocessed_data.csv  station_master.csv
backend/db/: database.py
backend/etl/: import_stations.py
backend/models/: alert.py  crowd_model.pkl  label_encoders.pkl  metro_model.pkl  scaler.pkl  schedule.py  user.py
backend/notebooks/: 01_EDA_ALL_Datasets.ipynb  02_Preprocessing_All_Datasets.ipynb  02_Preprocessing_All_Datasets.ipynb.ipynb  (+1 more)
(+701 files in other folders)
